@@ -1,6 +1,7 @@
 v4.1.4
 - export formatData, completeAlgo and formatModel functions to avoir using RMixtCompUtilities::: in RMixtComp
 - add class parameter for functional models in plotDataBoxplot
+- change default value of nInitPerClass in createAlgo function
 
 v4.1.3 2020-10-02
 - formatModel manages data.frame and matrix for models with hyperparameters
